# micropilot

./: .gitignore  README.md  camera.py  client.py  config.py  controller.py  deploy.sh  drive.py  drive_client.py  drive_server.py  micropilot.py  micropilot2.py  model.py  pyproject.toml  server.py  train_client.py  train_server.py
model/: model.py
