[tool.poetry]
name = "micropilot2"
version = "0.1.0"
description = ""
authors = ["Ryan Stout <ryanstout@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.3.0"
wandb = "^0.16.6"
torchmetrics = "^1.3.2"
torchvision = "^0.18.0"
timm = "^0.9.16"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"
pytorch-lightning = "^2.2.3"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
